Bug 1669625. Avoid extra, unneeded SchedulePaint calls with the new scrollbar code. r=kats

We don't want these calls anyway, but they seem to trigger a pre-existing webrender issue.

When the compositor gets back to the main thread with a scroll position update it calls ScrollFrame in APZCCallbackHelper (https://searchfox.org/mozilla-central/rev/f82d5c549f046cb64ce5602bfd894b7ae807c8f8/gfx/layers/apz/util/APZCCallbackHelper.cpp#160). ScrollFrame first calls SetVisualViewportOffset and then tries to scroll the scroll frame (ie update the layout/main thread scroll position).

With the old scrollbar code (ie before bug 1657822) we update the scrollbar position (with a call to UpdateScrollbarPosition) in ScrollFrameHelper::ScrollToImpl (https://searchfox.org/mozilla-central/rev/f82d5c549f046cb64ce5602bfd894b7ae807c8f8/layout/generic/nsGfxScrollFrame.cpp#3155), ie after we update the layout scroll position. Note that we have a AutoScrollbarRepaintSuppression on the stack during this call, this prevents a SchedulePaint call from happening in nsSliderFrame as a result (https://searchfox.org/mozilla-central/rev/f82d5c549f046cb64ce5602bfd894b7ae807c8f8/layout/xul/nsSliderFrame.cpp#764).

With the new scrollbar code we now update the scrollbar position in the call to SetVisualViewportOffset. But there is no AutoScrollbarRepaintSuppression on this path, so we avoid the SchedulePaint call.

We want to avoid this SchedulePaint call anyways, but it seems to tickle some pre-existing webrender issue when the app units per dev pixel value (affected by full zoom and system zoom) isn't something nice and round (like 30 or 60).

Differential Revision: https://phabricator.services.mozilla.com/D92840